--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,15 +19,15 @@
   </tr>
   </thead>
   <tbody>
-  <% @users.each_with_index do |user, index| %>
+  <% @records.each_with_index do |user, index| %>
     <tr>
       <td><%= index + 1 %></td>
-      <td><%= user.first_name %></td>
-      <td><%= user.last_name %></td>
-      <td><%= user.email_id %></td>
-      <% if user.import_failure_message.present? %>
+      <td><%= user["first_name"] %></td>
+      <td><%= user["last_name"] %></td>
+      <td><%= user["email_id"] %></td>
+      <% if user[:error_messages].present? %>
         <td class="error">
-          <%= user.import_failure_message %>
+          <%= user[:error_messages] %>
         </td>
       <% else %>
         <td class="success">
